--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -1,1 +1,1 @@
-host    all             all             0.0.0.0/0             md5
+host    all             all             0.0.0.0/0             scram-sha-256
